GearsetPOC/force-app/main/default/objects/Project_task__c/Project_task__c.object-meta.xml
<CustomObject>
    <label>Project_task</label>
    <nameField>
        <label>Project_task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project_tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>