GearsetPOC/force-app/main/default/objects/Project_task__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <displayFormat>T{0000}</displayFormat>
    <label>id</label>
    <type>AutoNumber</type>
</CustomField>