GearsetPOC/force-app/main/default/objects/Project_task__c/fields/IS_Teams__c.field-meta.xml
<CustomField>
    <fullName>IS_Teams__c</fullName>
    <label>IS_Teams</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate and Operations Systems</fullName>
                <default>true</default>
                <label>Corporate and Operations Systems</label>
            </value>
            <value>
                <fullName>Customer Systems</fullName>
            </value>
            <value>
                <fullName>Infrastructure Services</fullName>
            </value>
            <value>
                <fullName>IS Security</fullName>
            </value>
            <value>
                <fullName>Sales Systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>